# Glider_sim

./: .gitignore  Readme.md
src/dave/models/dave_worlds/worlds/: dave_ocean_waves.world  gen_world.py
src/glider_sim/ug_control/: package.xml
src/glider_sim/ug_control/config/: pid_params.yaml
src/glider_sim/ug_control/include/ug_control/: pid_controller.h
src/glider_sim/ug_control/launch/: control.launch
src/glider_sim/ug_control/src/: control_node.cpp  pid_controller.cpp  state_converter_node.cpp
src/glider_sim/ug_description/: CMakeLists.txt  package.xml
src/glider_sim/ug_description/config/: glider.rviz
src/glider_sim/ug_description/launch/: display.launch  full_sim.launch
src/glider_sim/ug_description/scripts/: calculate_hull_cog.py
src/glider_sim/ug_description/urdf/: ug_glider.xacro  ug_glider_actuators.xacro  ug_glider_base.xacro  ug_glider_gazebo.xacro  ug_glider_sensors.xacro
src/glider_sim/ug_description/urdf/temp/: ug_glider_base.xacro.broken  ug_glider_gazebo.xacro.broken
src/glider_sim/ug_gazebo_plugins/msg/: BuoyancyEngineStatus.msg
src/glider_sim/ug_hardware_sim/: package.xml
src/glider_sim/ug_hardware_sim/config/: hardware_params.yaml
src/glider_sim/ug_hardware_sim/include/ug_hardware_sim/: HardwareSimPlugin.hh
src/glider_sim/ug_hardware_sim/src/: HardwareSimPlugin.cc
src/glider_sim/ug_msgs/msg/: ActuatorCmd.msg
src/glider_sim/ug_viz/: CMakeLists.txt  package.xml  setup.py
src/glider_sim/ug_viz/launch/: dashboard.launch  viz.launch
src/glider_sim/ug_viz/scripts/: glider_dashboard
src/glider_sim/ug_viz/src/: glider_viz_node.cpp
src/ug_control/: CMakeLists.txt
src/ug_control/config/: pid_params.yaml
src/ug_control/include/ug_control/: pid_controller.h
src/ug_control/launch/: control.launch
src/ug_control/src/: control_node.cpp  pid_controller.cpp  state_converter_node.cpp
src/ug_description/: package.xml
src/ug_description/config/: glider.rviz
src/ug_description/launch/: full_sim.launch  gazebo_dave_ocean.launch  gazebo_glider.launch  gazebo_simple_ocean.launch  upload_glider.launch
src/ug_description/meshes/: UG_steer.stl  ug_oil.stl
src/ug_description/urdf/: ug_glider.xacro  ug_glider_actuators.xacro  ug_glider_base.xacro  ug_glider_gazebo.xacro  ug_glider_gazebo.xacro.bak
src/ug_description/urdf/temp/: ug_glider_gazebo.xacro.bak
src/ug_gazebo_plugins/: CMakeLists.txt  package.xml
src/ug_gazebo_plugins/include/ug_gazebo_plugins/: BuoyancyEnginePlugin.hh
src/ug_gazebo_plugins/msg/: BuoyancyEngineStatus.msg
src/ug_gazebo_plugins/src/: BuoyancyEnginePlugin.cc
src/ug_hardware_sim/: CMakeLists.txt
src/ug_hardware_sim/config/: hardware_params.yaml  joint_controllers.yaml
src/ug_hardware_sim/include/ug_hardware_sim/: HardwareSimPlugin.hh
src/ug_hardware_sim/src/: HardwareSimPlugin.cc
src/ug_msgs/: CMakeLists.txt  package.xml
src/ug_msgs/msg/: ActuatorState.msg  GliderState.msg
src/ug_viz/: CMakeLists.txt  package.xml
src/ug_viz/launch/: dashboard.launch
src/ug_viz/resource/: plugin.xml
src/ug_viz/src/ug_viz/: glider_dashboard.py
src/uuv_simulator/uuv_gazebo_plugins/uuv_gazebo_plugins/: CMakeLists.txt
src/uuv_simulator/uuv_gazebo_plugins/uuv_gazebo_plugins/src/: BuoyantObject.cc
src/uuv_simulator/uuv_gazebo_plugins/uuv_gazebo_ros_plugins/include/uuv_gazebo_ros_plugins/: UnderwaterObjectROSPlugin.hh
src/uuv_simulator/uuv_gazebo_plugins/uuv_gazebo_ros_plugins/src/: UnderwaterObjectROSPlugin.cc
