<?xml version="1.0"?>
<package format="2">
  <name>ug_gazebo_plugins</name>
  <version>0.1.0</version>
  <description>Gazebo plugins for Underwater Glider simulation</description>

  <maintainer email="ncu@todo.todo">ncu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS dependencies -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <!-- Gazebo dependencies -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_dev</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>
</package>
