<?xml version="1.0"?>
<package format="2">
  <name>ug_msgs</name>
  <version>0.1.0</version>
  <description>水下滑翔机仿真系统自定义消息定义</description>
  <maintainer email="dev@ug-sim.org">UG-Sim Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
