<?xml version="1.0"?>
<package format="2">
  <name>ug_viz</name>
  <version>0.1.0</version>
  <description>水下滑翔机 RQT 仪表盘：指令发送 + 状态监控</description>
  <maintainer email="dev@ug-sim.org">UG-Sim Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ug_msgs</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/resource/plugin.xml"/>
  </export>
</package>
