<?xml version="1.0"?>
<package format="2">
  <name>ug_control</name>
  <version>0.1.0</version>
  <description>水下滑翔机控制层：状态转换 + PID 控制器</description>
  <maintainer email="dev@ug-sim.org">UG-Sim Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>ug_msgs</depend>
</package>
